--- a/src/pages/old.astro
+++ b/src/pages/old.astro
@@ -13,7 +13,7 @@ import { Content } from "../content/pages/index.md";
     <div class="flex items-center gap-2">
       <img
         src="/static/bhante-1.png"
-        alt="Bhante"
+        alt="Venerable Jeffrey"
         class="h-36 w-full rounded-md border border-zinc-500/50 object-cover"
       />
       <img
